RESOLVED - 305641: [design] view contribution items have to much spacing https://bugs.eclipse.org/bugs/show_bug.cgi?id=305641

--- a/bundles/org.eclipse.rap.design.example/theme/business/business.css
+++ b/bundles/org.eclipse.rap.design.example/theme/business/business.css
@@ -1488,7 +1488,7 @@ MenuItem.menuBar:hover {
 
 ToolBar.viewToolbar {
   background-color: transparent;
-  padding: 3px 2px;
+  padding: 1px 2px;
   spacing: 2px;
 }
 
