--- a/bundles/org.eclipse.rap.design.example/theme/fancy/fancy.css
+++ b/bundles/org.eclipse.rap.design.example/theme/fancy/fancy.css
@@ -1456,7 +1456,7 @@ MenuItem.menuBar:hover {
 
 ToolBar.viewToolbar {
   background-color: transparent;
-  padding: 1px 2px;
+  padding: 0px 2px;
   spacing: 2px;
 }
 
